@@ -1,3 +1,8 @@
+Mon Sep 17 22:53:40 BST 2012  Colin Watson  <cjwatson@debian.org>
+
+	* autogen.sh, release.sh: Use 'set -e' rather than '#! /bin/sh -e',
+	  to avoid accidents when debugging with 'sh -x'.
+
 Mon Sep 17 22:53:14 BST 2012  Colin Watson  <cjwatson@debian.org>
 
 	* Makefile.am (EXTRA_DIST): Add gnulib/gets.patch.
